statum-macros/tests/ui/invalid_transition_plain_struct_machine_name.stderr
error: Error: no resolved `#[machine]` named `Machine` was found in module `invalid_transition_plain_struct_machine_name`.
       Statum only resolves `#[machine]` items that have already expanded before this `#[transition]` impl. Include-generated transition fragments are only supported when the machine name is unique among the currently loaded machines in this crate.
       A struct named `Machine` exists on line 20, but it is not annotated with `#[machine]`.
       No same-named `#[machine]` items were found in other modules of this file.
       No `#[machine]` items were found in this module.
       Help: apply `#[transition]` to an impl for the machine type generated by `#[machine]` in this module and declare that machine before the transition impl.
       Correct shape: `#[transition] impl Machine<CurrentState> { ... }` where `Machine` is declared with `#[machine]` in `invalid_transition_plain_struct_machine_name`.
  --> tests/ui/invalid_transition_plain_struct_machine_name.rs:23:6
   |
23 | impl Machine<A> {
   |      ^^^^^^^
